# object_detect_pkg

./: README.md
nona_object_detect/: CMakeLists.txt  package.xml
nona_object_detect/include/nona_object_detect/: nona_localize_object.h
nona_object_detect/src/: face_track.cpp  nona_localize_object.cpp  red_track_kinect.cpp
nona_object_detect/test/: test_kinect.cpp
